# DSGE

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  buffer_light_fps.txt  build.bat  build_dsge_demo.sh  build_dsge_demo_hash.sh  clean.sh  cloud_cargo.sh  compress.sh  file_browser.py  gaussian_testing.py  get_from_comp.sh  install_deps.sh  io_siberian_export.py  laptop_cargo.sh  makeExeFromPy.sh  make_release  no_light_fps.txt  run  siberian_ctypes.py  ui_tester.py  uniform_light_fps.txt  vulkaninfo
data/: export.blend  exporter.blend
data/fonts/: default.dds
data/mesh/: SphericalCube.mesh  Suzanna.mesh  lightpoint.mesh  monkey.mesh  plane.mesh
data/scenes/: Scene.scene
data/shaders/: SSR.glsl  base_frag.glsl  blur.glsl  bng.glsl  config.h  constants.h  deferred.glsl  depth_packing.h  draw_texture_frag.glsl  draw_texture_vert.glsl  fragment.glsl  geometry_pass.frag.glsl  geometry_pass.vert.glsl  head.h  head_good.h  lighting.glsl  matrix_algebra.ipynb  median.glsl  predenoiser.glsl  projections.glsl  random.glsl  screen_font.glsl  screen_plane.glsl  shadowmap.frag.glsl  sky_generator.glsl  skybox.glsl  ssao.glsl  tonemaping.glsl  txaa.glsl  txaa_ss.glsl  version.glsl  vertex.glsl
data/shaders/UI2/: rectangle_fragment.glsl  rectangle_vertex.glsl  text.glsl  text_plane.glsl
data/shaders/alien/: clouds_shadertoy.glsl  clouds_shadertoy_alt.glsl  temporal_aa_shadertoy_epic.glsl
data/shaders/base_shaders/: base_frag.glsl  base_frag_lighting.glsl  base_vert.glsl  base_voxel_frag.glsl  shadow_map.glsl  skin_vert.glsl
data/shaders/denoisers/: kuwahara.glsl  old_denoiser.glsl  smart_denoise.glsl
data/shaders/filters/: bilateral.h  fxaa.h  stsr.glsl  temporal_denoiser.glsl
data/shaders/functions/: extensions.glsl  projections.glsl  random.glsl
data/shaders/lighting/: composing.glsl  deferred_lighting_pass.glsl  dsf.glsl  generic.h  lighting_filter_pass.glsl  lights.glsl  pbr.fs.glsl  pbr_structures.h  point.h  reflection.glsl  reflection.glsl.bak  shadowmap.h  shadows.glsl  spotlight.h  sun.h
data/shaders/motion_blur/: vectors_base_frag.glsl  vectors_base_vert.glsl  vectors_skin_vert.glsl
data/shaders/overlay/: debug_gui.h  debug_overlay.glsl
data/shaders/postprocessing/: bloom.glsl  filter_r_rt.glsl  frpp.glsl  fxaa.glsl  motion_blur.glsl  screen_plane.glsl
data/shaders/raytracing/: denoise.glsl  global_illumination.glsl  ssr.glsl
data/shaders/shadertoy/: buffer_a.glsl  buffer_b.glsl  buffer_c.glsl  buffer_d.glsl  common.glsl  image.glsl
data/textures/: 028ba369482d.dds  Int2.dds  beech wood_albedo.dds  grid.dds  hexa_holes_large_nrm.dds
inc/: .directory  configs.h  engine.h  game_structures.h  image.h  io.h  jpeg_magic.h  linalg.h  locales.h  memmanager.h  sound.h  wav.h
inc/2D_renderer/: 2D_renderer.h  fForm.h  fText.h  forms.h
inc/GL/: eglew.h  glew.h  glxew.h
inc/glad/: glad.h
inc/structures/: dict.h  framebuffer.h  game_object.h  list.h  material.h  mesh.h  scene.h  shader.h  texture.h  types.h
inc/structures/components/: camera_component.h  light_component.h
modules/: PlayerControllers.py
resource_converter/: font_creator.py
scripts/: __init__.py  blue_noise_generator.py  curves.py  first_person.py  flying_ball.py  glsl_obfuscator.py  io_siberian_export.py  itmes_handler.py  projectile.py  shader_gen.py  third_person.py  vehicles.py  weapon.py
src/: .directory  animation.c  command_buffer.rs  engine.c  framebuffer.rs  game_functions.c  game_object.rs  gl_tester_2.c  gl_tester_3.c.bak  glad.c  glenums.rs  glew.c  image.c  io.c  jpeg_magic.c  lib.rs  linalg.c  main.rs  main.rs.bak  material.rs  memmanager.c  mesh.c  mesh.rs  objects.c  physics.c  process_frames.rs  references.rs  renderer.c  renderer.rs  scene.c  scene_loader.rs  shader.c  shader.rs  siberian.c  sound.c  teapot.rs  test.rs  texture.rs  textures.c  time.rs  (+4 more)
src/2D_renderer/: 2D_renderer.c  fForm.c  fText.c  forms.c
src/components/: camera.rs  light.rs  mod.rs  visual.rs
src/components/light/: mod.rs  point_light.rs  shadow_buffer.rs  spotlight.rs  sun_light.rs
src/game_logic/: behaviour.rs  debug_bbox.rs  events.rs  mod.rs  motion_example.rs  mouse_look.rs
src/game_object/: camera_object.rs  mesh_object.rs  mod.rs
src/renderer/: geometry_pass.rs  mod.rs  shadowmap_pass.rs
src/renderer/postprocessor/: accumulator_test.rs  copy.rs  debug_overlay.rs  fsr.rs  lighting_pass.rs  lightintg.rs  mod.rs  rolling_hills.rs  stack_buffer.rs  temporal_deoiser.rs  temporal_filter.rs  y_flip.rs
src/resource_manager/: mod.rs
src/scene/: mod.rs  scene_loader.rs
src/shader/: mod.rs  shader_struct_uniform.rs
src/structures/: blue_noise_generator.py  dict.c  framebuffer.c  game_object.c  list.c  material.c  mesh.c  scene.c  shader.c  texture.c
src/structures/components/: camera_component.c  light_component.c
src/texture/: dds_header.rs  ktx_header.rs  pixel_format.rs  types.rs
std140-0.2.6/: .cargo_vcs_info.json  Cargo.toml
std140-0.2.6/src/: lib.rs
(+44 files in other folders)
