[package]
name = "dsge_vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.30.0"
vulkano-win = "0.30.0"
winit = "0.26.1"
nalgebra = "0.31.0"
image = "0.24.1"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
byteorder = { version = "1.3", default-features = false }
num = "0.4.0"
#half = "1.8.2"

# Профиль проекта
[profile.release]
opt-level = 3 # Уровень оптимизации.
lto = true # Оптимизация при линковке. Оптимизирует вложенные функции.
#codegen-units = 1 # Оптимизация в 1 поток. Позволяет дополнительно оптимизировать машинный код.
overflow-checks = false # Отключение проверки переполнения числовых типов. Ускоряет арифметические операции.
panic = 'abort' # Отключение вывода стека при панике. Уменьшает размер исполняемого файла

# Профиль библиотек
[profile.release.package."*"]
opt-level = 3
#codegen-units = 1
overflow-checks = false

[lib]
name = "dsge_vk"
path = "src/lib.rs"

[[bin]]
name = "base_example"
path = "src/main.rs"