[package]
name = "dsge_vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.1"
vulkano-win = "0.34.0"
winit = "0.28.3"
nalgebra = "0.31.4"
bytemuck = { version = "1.12.1", features = ["derive", "extern_crate_std", "min_const_generics"] }
byteorder = { version = "1.3" }
num = "0.4.0"
image = "0.24.1"
rand = "0.8.5"
getset = "0.1.2"
std140 = { path = "./std140-0.2.6" }

[lib]
name = "dsge_vk"
path = "src/lib.rs"
[features]
default = ["use_image"]
use_image = []

[[bin]]
name = "base_example"
path = "src/main.rs"


# Профиль проекта
[profile.release]
opt-level = 3 # Уровень оптимизации.
lto = "thin" # Оптимизация при линковке. Оптимизирует вложенные функции.
codegen-units = 1 # Оптимизация в 1 поток. Позволяет дополнительно оптимизировать машинный код.
overflow-checks = false # Отключение проверки переполнения числовых типов. Ускоряет арифметические операции.
panic = 'abort' # Отключение вывода стека при панике. Уменьшает размер исполняемого файла
strip = true

# Профиль библиотек
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
overflow-checks = false

# Профиль библиотек
# [profile.dev.package."*"]
# opt-level = 3